# eapi

./: .coveragerc  .editorconfig  .env-template  .env.template  .gitignore  Dockerfile  Dockerfile.mongo  Dockerfile.postgres  Dockerfile.python  Pipfile  README.md  alembic.ini  app.py  bootstrap.sh  commands.py  config.py  docker-compose.yml  docker-compose.yml.0  loader.py  main.yml  manage.py  models.py  pyproject.toml  pytest.ini  requirements.txt  schema.py.example  setup.cfg
.docker/: Dockerfile  docker-compose.yml
.ebextensions/: db-migrate.config  django.config  python.config
alembic/: env.py
app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
appeapi/: apps.py  models.py  views.py
apphome/: urls.py
appsrer/: admin.py  apps.py  models.py  schema.py  urls.py  views.py
appwgew/: admin.py  models.py  schema.py  urls.py
client/: README.md  package-lock.json  package.json  pnpm-lock.yaml  poi.config.js  rollup.config.js  scratch.txt  tailwind.config.js
compose/: Dockerfile.mongodb  docker-compose.yml
db/: Dockerfile
docker/: Dockerfile  Dockerfile.pgsql  docker-compose.yml
eapi/: settings.py  urls.py  wsgi.py
fixtures/: initial.data.json  initialdata.sql
frontend/: README.md  index.html  package-lock.json  package.json
nginx/: Dockerfile  default.conf
project/: settings.py  urls.py
scripts/: load_raingages.py  precip.csv  precip.py  precip.xls  raingages.py  srer.py  srer_precip.py  srer_raingages.py  wgew_precip_events.py
server/: README.md  __init__.py  api.py  pytest.ini  requirements.txt  schema.py
(+128 files in other folders)
