[tool.poetry]
name = "eapi"
version = "0.1.0"
description = ""
authors = ["Averill Cate, Jr <aacatejr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
click = "^7.1.2"
python-dotenv = "^0.15.0"
Flask-GraphQL = "^2.0.1"
graphene = "^2.1.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
